apps/minecraft/minecraft-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-server
  template:
    metadata:
      labels:
        app: minecraft-server
    spec:
      containers:
      - name: minecraft
        image: docker.io/itzg/minecraft-server:stable-java21
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 25565
          hostPort: 25565
        - containerPort: 19132
          hostPort: 19132
          protocol: UDP
        - containerPort: 19132
          hostPort: 19132
          protocol: TCP
        volumeMounts:
        - name: minecraft-data
          mountPath: /data
      volumes:
      - name: minecraft-data
        persistentVolumeClaim:
          claimName: minecraft-pvc
  strategy:
    type: Recreate
