apps/minecraft/minecraft-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-service
  namespace: minecraft
  labels:
    release: multimedia
spec:
  type: LoadBalancer
  ports:  
  - port: 25565
    targetPort: 25565
    protocol: TCP
    name: minecraft-game
  - port: 8123
    name: web-map
    targetPort: 8123
    protocol: TCP    
  selector:
    app: minecraft-server
